add new test cases, little test refactoring, up the build gradle version to new minor update